# ofd

./: .gitignore  DESIGN.md  README.md  pyproject.toml
bench/: audit_drops.py  bench_extract.py  bench_matcher.py  capture_corpus.py  capture_extract_corpus.py  corpus_meta.json  extract_golden.jsonl  golden.jsonl  timings.json  watchlist.json
src/ofd/: __main__.py  aggregate.py  config.py  digest.py  gitio.py  globs.py  mirrors.py  pipeline.py  release_detect.py  rollouts.py  scoring.py  state.py  watchlist.py
src/ofd/cli/: _progress.py  _resolve.py  _since.py  _theme.py  commits.py  digest.py  init_cmd.py  ledger_cmd.py  list_cmd.py  main.py  mirror.py  query.py  reindex.py  rollouts.py  run.py  show.py  watchlist_cmd.py
src/ofd/events/: record.py  store.py
src/ofd/extractors/: context_keys.py  dispatcher.py  python_.py  rng.py
src/ofd/ledger/: __init__.py  format.py  frontmatter.py  read.py  render.py  status.py  update.py
src/ofd/narrate/: __init__.py  client.py  prompts.py  runner.py
tests/: test_aggregate.py  test_cli_mirror.py  test_cli_query_commits_rollouts.py  test_cli_resolve.py  test_cli_since.py  test_cli_watchlist.py  test_config.py  test_digest.py  test_events_store.py  test_extractors_python.py  test_extractors_rng.py  test_gitio.py  test_globs.py  test_ledger_format.py  test_ledger_read.py  test_ledger_update.py  test_narrate.py  test_pipeline_end_to_end.py  test_release_detect.py  test_scoring.py  test_state.py  test_watchlist_and_rollouts.py
tests/fixtures/: repo_builder.py
